syntax = "proto3";

option go_package = "github.com/kujilabo/bamboo/bamboo-worker-redis-redis/proto";

package proto;

message RedisRedisParameter {
  int32   x = 1;
  int32   y = 2;
}

message RedisRedisResponse {
  int32   value = 1;
}