syntax = "proto3";

option go_package = "github.com/kujilabo/bamboo/bamboo-worker1/proto";

package proto;

message Worker1Parameter {
  int32   x = 1;
  int32   y = 2;
}

message Worker1Response {
  int32   value = 1;
}